Fix highlighter z-index

--- a/DevilDaggersInfo.Web.BlazorWasm.Client.Core.CanvasChart/Components/LineChartHighlighter.razor.css
+++ b/DevilDaggersInfo.Web.BlazorWasm.Client.Core.CanvasChart/Components/LineChartHighlighter.razor.css
@@ -1,6 +1,6 @@
 .highlighter-container {
 	position: relative; /*TODO: Fix highlighter pushing chart down.*/
-	z-index: 100;
+	z-index: 5;
 	width: 256px;
 	pointer-events: none;
 }
